# temporary-langchain-demo

./: 12_homework_pasvalys.py  12_homework_pasvalys_copy.py  README.md  cursorrules-example-from-Jaunius.txt  haystack_rag.py  main.py  main1.py  pyproject.toml  rag_helpers.py
docs/: haystack.md  langchain.md  pasvalys copy.txt
json-mode/: json_mode_applied.py  json_mode_demo.py  json_mode_demo_from samples.py  json_mode_lt_language_answering_system.py  main.py  pyproject.toml
